# SPARK_BACKEND_MIDEA

./: CMakeLists.txt  readme  structure.txt
apps/: CMakeLists.txt  readme
apps/math/: readme
apps/media/: CMakeLists.txt
apps/media/eihstream/: CMakeLists.txt  eihstream.cpp
apps/media/ethstream/: CMakeLists.txt  ethstream.cpp
apps/message/: CMakeLists.txt  aubo_io_publisher.cpp  aubo_publisher.cpp  aubo_wp_publisher.cpp  omron_plc_publisher.cpp  readme
apps/robotapps/: CMakeLists.txt  robot_node.cpp
apps/robotapps/include/: robot_services.hpp
apps/robotapps/source/: robot_services.cpp
apps/service_manager/: CMakeLists.txt  readme  spark_manager_node.cpp
apps/service_manager/include/: spark_service_manager.hpp
apps/service_manager/source/: spark_service_manager.cpp
apps/visionapps/: CMakeLists.txt  vision_node.cpp
apps/visionapps/include/: vision_services.hpp
apps/visionapps/source/: vision_services.cpp
common/: common_signal_chart.hpp  spark_vision.hpp
modules/: CMakeLists.txt
modules/communication/: CMakeLists.txt
modules/communication/ros_comm/: CMakeLists.txt  readme
modules/communication/ros_comm/action/: RobotService.action  ServiceManager.action  VisionService.action
modules/communication/ros_comm/msg/: AuboInfo.msg  OmronPLCInfo.msg
modules/communication/ros_comm/srv/: RobotClientServer.srv
modules/filesystem/: CMakeLists.txt
modules/filesystem/include/: file_system.hpp
modules/filesystem/source/: file_system.cpp
modules/io/: CMakeLists.txt
modules/io/aubo/: readme
modules/io/elite/: readme
modules/io/plc/: CMakeLists.txt  readme
modules/io/plc/include/: omron_plc.hpp  udp_client.hpp
modules/io/plc/source/: omron_plc.cpp  udp_client.cpp
modules/math/: CMakeLists.txt
modules/math/include/: coord_transform.hpp
modules/math/source/: coord_transform.cpp
modules/profiling/: CMakeLists.txt  readme
modules/profiling/include/: time_profile.hpp
modules/profiling/source/: time_profile.cpp
modules/robot/: CMakeLists.txt
modules/robot/aubo/: CMakeLists.txt  readme
modules/robot/elite/: readme
modules/vision/: CMakeLists.txt  readme
modules/vision/calibration/: CMakeLists.txt
modules/vision/calibration/include/: chessboard_intrinsics.hpp  halcon_cam_calib_2d.hpp  halcon_eye_in_hand_3d.hpp  halcon_hand_eye_calib_2d.hpp  halcon_projection_transform_2d.hpp
modules/vision/calibration/source/: chessboard_intrinsics.cpp  halcon_cam_calib_2d.cpp  halcon_eye_in_hand_3d.cpp  halcon_hand_eye_calib_2d.cpp  halcon_projection_transform_2d.cpp
modules/vision/camera/: CMakeLists.txt
modules/vision/imgproc/: CMakeLists.txt
modules/vision/imgproc/include/: image_deblur.hpp  image_warper.hpp
modules/vision/imgproc/source/: image_deblur.cpp  image_warper.cpp
modules/vision/tracker/: CMakeLists.txt
modules/vision/tracker/include/: halcon_tracker.hpp  halcon_tracker3d.hpp
modules/vision/tracker/source/: halcon_tracker.cpp  halcon_tracker3d.cpp
modules/vision/utilities/: CMakeLists.txt  readme
modules/vision/utilities/include/: halcon_utils.hpp
modules/vision/utilities/source/: halcon_utils.cpp
ros/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros/include/spark_backend/: RobotClientServerRequest.h  RobotClientServerResponse.h  VisionClientServerRequest.h  VisionClientServerResponse.h
ros/share/common-lisp/ros/spark_backend/msg/: _package.lisp  _package_AuboInfo.lisp  _package_OmronPLCInfo.lisp  _package_RobotServiceActionGoal.lisp  _package_RobotServiceActionResult.lisp  _package_RobotServiceFeedback.lisp  _package_RobotServiceGoal.lisp  _package_RobotServiceResult.lisp  _package_ServiceManagerActionFeedback.lisp  _package_ServiceManagerFeedback.lisp  _package_ServiceManagerGoal.lisp  _package_ServiceManagerResult.lisp  _package_VisionServiceAction.lisp  _package_VisionServiceGoal.lisp  _package_VisionServiceResult.lisp  spark_backend-msg.asd
ros/share/common-lisp/ros/spark_backend/srv/: _package.lisp  _package_VisionClientServer.lisp  spark_backend-srv.asd
ros/share/gennodejs/ros/spark_backend/msg/: _index.js
ros/share/gennodejs/ros/spark_backend/srv/: _index.js
ros/share/spark_backend/cmake/: spark_backend-msg-paths.cmake
ros/share/spark_backend/msg/: RobotServiceAction.msg  RobotServiceActionFeedback.msg  RobotServiceActionGoal.msg  RobotServiceActionResult.msg  RobotServiceFeedback.msg  RobotServiceGoal.msg  RobotServiceResult.msg  ServiceManagerAction.msg  ServiceManagerActionFeedback.msg  ServiceManagerActionGoal.msg  ServiceManagerActionResult.msg  ServiceManagerFeedback.msg  ServiceManagerGoal.msg  ServiceManagerResult.msg  VisionServiceAction.msg  VisionServiceActionFeedback.msg  VisionServiceActionGoal.msg  VisionServiceActionResult.msg  VisionServiceGoal.msg  VisionServiceResult.msg
support_materials/: 20210325工艺流程-许金鹏.xlsx  AuboRunning代码修改意见.odt  SPARK 后端.xmind  change1.1.txt  problem.txt  temp.txt
test/: CMakeLists.txt
test/actionlib/: CMakeLists.txt  test_client.cpp  test_server.cpp
test/cam_subscriber/: CMakeLists.txt  cam_subscriber.cpp
test/eih_calibration_test/: CMakeLists.txt  calib-service.cpp  calib_verify.cpp  eih-transformation.cpp  pose_transform.cpp
test/file_system/: CMakeLists.txt  file_system_test.cpp
test/front_end_simulator/: CMakeLists.txt  front_end_simulator.cpp
test/image_undistortion/: CMakeLists.txt  undistort.cpp
test/manager_client/: CMakeLists.txt  manager_client.cpp
test/math/: CMakeLists.txt  euler_quat.cpp
test/move_robot/: CMakeLists.txt  move_joint_angle.cpp  move_robot.cpp  readme
test/pubsub/: CMakeLists.txt  aubo_info_subscriber.cpp  custom_message_publisher.cpp  custom_message_subscriber.cpp
test/robot_test_client/: CMakeLists.txt  get_io.cpp  move_line.cpp  move_track.cpp  movel_test.cpp  robot_test.cpp  robotclient.cpp
test/vision_test_client/: CMakeLists.txt  generate_template.cpp  track_target.cpp  vision_test_client.cpp
test/yaml_test/: CMakeLists.txt  yaml_cpp_read.cpp  yaml_read  yaml_read.cpp  yaml_write  yaml_write.cpp
