add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/pubsub/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/actionlib/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/clientserver/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/robot_test_client/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/move_robot/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/math/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/manager_client/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/front_end_simulator/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/cam_subscriber/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/vision_test_client/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/file_system/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/yaml_test/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/eih_calibration_test/)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/image_undistortion/)